# aik-back

./: .dockerignore  .env-ci  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_LOGGING.md  alembic.ini  config.py  create_promt.sh  docker-compose.yml  logger.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml
api/: __main__.py  main.py
app/: __init__.py  db.py  dependencies.py  main.py  models.py  schemas.py  workflows.py
app/api/: __init__.py
app/core/: config.py
app/services/: __init__.py  align.py  asr.py  exceptions.py  lalal.py  s3.py
app/static/: openapi.json
application/job_matcher/: ioc.py
application/karaoke_tracks/: __init__.py  ioc.py
background/: __main__.py  karaoke_tasks.py
core/: ioc.py
core/auth/: __init__.py  auth_service.py  ioc.py  router.py
core/database/: db.py  ioc.py  uow.py
core/errors/: __init__.py
core/file_storage/: __init__.py  file_storage_service.py  ioc.py  router.py
core/handlers/: handlers.py
core/models/: base.py  fields.py
core/notifier/: notifier.py  telegram_notifable.py  tg_aiogram_notifier.py
core/responses/: responses.py
core/types/: base.py
docs/: pipeline.md
dotenv/: __init__.py
fastapi/: __init__.py
httpx/: __init__.py
migrations/: env.py
migrations/versions/: 2025_10_30_1319-9d08d40f4a35_base_init_table.py  2025_10_31_1441-2c8da5dda8b2_create_karaoke_tracks_tables.py
pydantic/: __init__.py
tests/: conftest.py  test_health.py
uvicorn/: __init__.py
(+53 files in other folders)
