[project]
name = "aick-back"
version = "0.1.0"
description = "AI karaoke backend"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "dishka>=1.6.0",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]
